<?xml version="1.0"?>
<package>
  <name>boat_hw</name>
  <version>0.1.0</version>
  <description>life is hard </description>
  <maintainer email="renanm.b3@gmail.com">Roald Lemmens</maintainer>
  <license>GPLv3</license>

  <author email="renanm.b3@gmail.com">Renan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>

  <build_depend>vesc_driver</build_depend>
  <build_depend>vesc_msgs</build_depend>
  <build_depend>boat_controller</build_depend>	


  <run_depend>roscpp</run_depend>

  <run_depend>vesc_driver</run_depend>
  <run_depend>vesc_msgs</run_depend>
  <run_depend>boat_controller</run_depend>

  <export>
  </export>
</package>
